[gd_scene load_steps=9 format=3 uid="uid://bwjv6vp838wod"]

[ext_resource type="Script" uid="uid://dhrhb4yur4nii" path="res://ui/knight_hud.gd" id="1_3wku7"]
[ext_resource type="Texture2D" uid="uid://b41ldyjo0xyi3" path="res://ui/Player_window x2.png" id="1_i3iep"]
[ext_resource type="Texture2D" uid="uid://bquyrgm0se5yi" path="res://Textures/HUD/UI/NPC Vendor - avatar.png" id="2_3wku7"]
[ext_resource type="Texture2D" uid="uid://bjop4an1vj3mi" path="res://ui/Player_Health_Bar x2.png" id="3_clyhd"]
[ext_resource type="Texture2D" uid="uid://d0jx8vomjla4o" path="res://ui/Health_bar_fullx2.png" id="4_cx765"]
[ext_resource type="Texture2D" uid="uid://b642s2m867hfc" path="res://ui/Health_bar_damag_fullx2.png" id="5_eln1e"]
[ext_resource type="Texture2D" uid="uid://7lhlhhmvcngn" path="res://ui/potions/x2/potions1 x2.png" id="6_nnw2v"]
[ext_resource type="Texture2D" uid="uid://ci7woxmlor7ea" path="res://Textures/HUD/UI/UI-elements-32x32-separated sprites/9SlicedObjects_windows_details_3.png" id="7_kofg4"]


[node name="KnightHud" type="Control"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3wku7")

[node name="KnightPictureFrame" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_right = 64.0
offset_bottom = 74.0
texture = ExtResource("1_i3iep")

[node name="KnightPicture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 10.0
offset_right = 66.0
offset_bottom = 77.0
texture = ExtResource("2_3wku7")

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 2
offset_left = 63.0
offset_top = 30.0
offset_right = 273.0
offset_bottom = 40.0
max_value = 200.0
texture_over = ExtResource("3_clyhd")
texture_progress = ExtResource("4_cx765")
texture_progress_offset = Vector2(1, 1)

[node name="DamageBar" type="TextureProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 0
offset_right = 208.0
offset_bottom = 40.0
max_value = 200.0
value = 200.0
texture_progress = ExtResource("5_eln1e")
texture_progress_offset = Vector2(1, 1)

[node name="PotionBar" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 13.0
offset_right = 133.0
offset_bottom = 49.0

[node name="Potion" type="TextureRect" parent="PotionBar"]
layout_mode = 2
texture = ExtResource("6_nnw2v")
stretch_mode = 2

[node name="Potion2" type="TextureRect" parent="PotionBar"]
layout_mode = 2
texture = ExtResource("6_nnw2v")
stretch_mode = 2

[node name="Potion3" type="TextureRect" parent="PotionBar"]
layout_mode = 2
texture = ExtResource("6_nnw2v")
stretch_mode = 2

[node name="Potion4" type="TextureRect" parent="PotionBar"]
layout_mode = 2
texture = ExtResource("6_nnw2v")
stretch_mode = 2

[node name="Potion5" type="TextureRect" parent="PotionBar"]
layout_mode = 2
texture = ExtResource("6_nnw2v")
stretch_mode = 2

[node name="Potion6" type="TextureRect" parent="PotionBar"]
layout_mode = 2
texture = ExtResource("6_nnw2v")
stretch_mode = 2

[node name="KillCounterText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 75.0
offset_top = 45.0
offset_right = 283.0
offset_bottom = 94.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Kills:
"
scroll_active = false

[node name="KillCounterNumb" type="RichTextLabel" parent="KillCounterText"]
layout_mode = 0
offset_left = 39.0
offset_right = 247.0
offset_bottom = 49.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
scroll_active = false

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = -11.0
offset_top = -7.0
offset_right = 291.0
offset_bottom = 98.0
texture = ExtResource("7_kofg4")
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 14
patch_margin_bottom = 14

[node name="Name" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 72.0
offset_right = 70.0
offset_bottom = 92.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0
